--- a/no-instrumentation/pom.xml
+++ b/no-instrumentation/pom.xml
@@ -8,9 +8,8 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>components</artifactId>
+	<artifactId>no-instrumentation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<description>Projects demonstrating best practices for observing spring applications in production</description>
 	<packaging>pom</packaging>
 	
 	<modules>
