--- a/no-instrumentation/pom.xml
+++ b/no-instrumentation/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>spring-observability</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.example.no-instrumentation</groupId>
 	<artifactId>no-instrumentation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
