--- a/observation-api-instrumentation/pom.xml
+++ b/observation-api-instrumentation/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>spring-observability</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.example.observation-api</groupId>
 	<artifactId>observation-api-instrumentation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<description>Projects demonstrating best practices for observing spring applications in production</description>
