--- a/otel-sdk-instrumentation/pom.xml
+++ b/otel-sdk-instrumentation/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>spring-observability</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.example.otel</groupId>
 	<artifactId>otel-sdk-instrumentation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
