--- a/no-instrumentation/pom.xml
+++ b/no-instrumentation/pom.xml
@@ -7,11 +7,12 @@
 		<artifactId>spring-observability</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.example.no-instrumentation</groupId>
+	<groupId>com.example</groupId>
 	<artifactId>no-instrumentation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<modules>
+		<module>monolith-ui-api-db</module>
 	</modules>
 </project>
