--- a/docker/postgres/docker-compose.yml
+++ b/docker/postgres/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     labels:
       # see https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#features.docker-compose.custom-images for details
       org.springframework.boot.service-connection: postgres
-    image: "postgres:15"
+    image: "postgres:16"
     environment:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "password"
@@ -26,7 +26,7 @@ services:
   pgadmin:
     labels:
       org.springframework.boot.ignore: true
-    image: "dpage/pgadmin4:8.2"
+    image: "dpage/pgadmin4:latest"
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@example.com
       PGADMIN_DEFAULT_PASSWORD: admin
