--- a/docker/postgres/docker-compose.yaml
+++ b/docker/postgres/docker-compose.yaml
@@ -11,34 +11,34 @@ services:
     labels:
       # see https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#features.docker-compose.custom-images for details
       org.springframework.boot.service-connection: postgres
-    image: "${PG_IMAGE:-postgres:17}"
+    image: "${PG_IMAGE}"
     environment:
-      POSTGRES_USER: "${PG_USER:-postgres}"
-      POSTGRES_PASSWORD: "${PG_PASSWORD:-password}"
+      POSTGRES_USER: "${PG_USER}"
+      POSTGRES_PASSWORD: "${PG_PASSWORD}"
       PGDATA: "/data/postgres"
     volumes:
       - postgres:/data/postgres
       - ./db/docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
     ports:
-      - "${PG_PORT:-15432}:5432"
+      - "${PG_PORT}:5432"
     restart: unless-stopped
 
   pgadmin:
     labels:
       org.springframework.boot.ignore: true
-    image: "${PGADMIN_IMAGE:-dpage/pgadmin4:latest}"
+    image: "${PGADMIN_IMAGE}"
     environment:
-      PGADMIN_DEFAULT_EMAIL: "${PGADMIN_EMAIL:-admin@example.com}"
-      PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_PASSWORD:-admin}"
+      PGADMIN_DEFAULT_EMAIL: "${PGADMIN_EMAIL}"
+      PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_PASSWORD}"
       PGADMIN_CONFIG_SERVER_MODE: "False"
       PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
     volumes:
       - pgadmin:/var/lib/pgadmin
       - ./db/docker_pgadmin_servers.json:/pgadmin4/servers.json
     ports:
-      - "${PGADMIN_PORT:-15433}:80"
+      - "${PGADMIN_PORT}:80"
     entrypoint:
       - "/bin/sh"
       - "-c"
-      - "/bin/echo '${PG_USER:-postgres}:5432:*:${PG_USER:-postgres}:${PG_PASSWORD:-password}' > /tmp/pgpassfile && chmod 600 /tmp/pgpassfile && /entrypoint.sh"
+      - "/bin/echo '${PG_USER}:5432:*:${PG_USER}:${PG_PASSWORD}' > /tmp/pgpassfile && chmod 600 /tmp/pgpassfile && /entrypoint.sh"
     restart: unless-stopped
