--- a/docker/postgres/docker-compose.yaml
+++ b/docker/postgres/docker-compose.yaml
@@ -13,8 +13,8 @@ services:
       org.springframework.boot.service-connection: postgres
     image: "${PG_IMAGE}"
     environment:
-      POSTGRES_USER: "${PG_USER}"
-      POSTGRES_PASSWORD: "${PG_PASSWORD}"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "password"
       PGDATA: "/data/postgres"
     volumes:
       - postgres:/data/postgres
@@ -28,8 +28,8 @@ services:
       org.springframework.boot.ignore: true
     image: "${PGADMIN_IMAGE}"
     environment:
-      PGADMIN_DEFAULT_EMAIL: "${PGADMIN_EMAIL}"
-      PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_PASSWORD}"
+      PGADMIN_DEFAULT_EMAIL: "admin@example.com"
+      PGADMIN_DEFAULT_PASSWORD: "admin"
       PGADMIN_CONFIG_SERVER_MODE: "False"
       PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
     volumes:
@@ -40,5 +40,5 @@ services:
     entrypoint:
       - "/bin/sh"
       - "-c"
-      - "/bin/echo '${PG_USER}:5432:*:${PG_USER}:${PG_PASSWORD}' > /tmp/pgpassfile && chmod 600 /tmp/pgpassfile && /entrypoint.sh"
+      - "/bin/echo 'postgres:5432:*:postgres:password' > /tmp/pgpassfile && chmod 600 /tmp/pgpassfile && /entrypoint.sh"
     restart: unless-stopped
