--- a/docker/postgres/docker-compose.yaml
+++ b/docker/postgres/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     labels:
       # see https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#features.docker-compose.custom-images for details
       org.springframework.boot.service-connection: postgres
-    image: "${PG_IMAGE:-postgres:17}"
+    image: "postgres:17"
     environment:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "password"
@@ -20,13 +20,13 @@ services:
       - postgres:/data/postgres
       - ./db/docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
     ports:
-      - "${PG_PORT:-15432}:5432"
+      - "15432:5432"
     restart: unless-stopped
 
   pgadmin:
     labels:
       org.springframework.boot.ignore: true
-    image: "${PGADMIN_IMAGE:-dpage/pgadmin4:9.3}"
+    image: "dpage/pgadmin4:9.3"
     environment:
       PGADMIN_DEFAULT_EMAIL: "admin@example.com"
       PGADMIN_DEFAULT_PASSWORD: "admin"
@@ -36,7 +36,7 @@ services:
       - pgadmin:/var/lib/pgadmin
       - ./db/docker_pgadmin_servers.json:/pgadmin4/servers.json
     ports:
-      - "${PGADMIN_PORT:-15433}:80"
+      - "15433:80"
     entrypoint:
       - "/bin/sh"
       - "-c"
