--- a/docker/postgres/docker-compose.yaml
+++ b/docker/postgres/docker-compose.yaml
@@ -1,7 +1,3 @@
-# blow away all the volumes associated with this compose file
-#
-# docker compose down --volumes
-#
 volumes:
   postgres:
   pgadmin:
@@ -20,7 +16,7 @@ services:
       - postgres:/data/postgres
       - ./db/docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
     ports:
-      - "15432:5432"
+      - "${PG_PORT:-15432}:5432"
     restart: unless-stopped
 
   pgadmin:
@@ -36,7 +32,7 @@ services:
       - pgadmin:/var/lib/pgadmin
       - ./db/docker_pgadmin_servers.json:/pgadmin4/servers.json
     ports:
-      - "15433:80"
+      - "${PGADMIN_PORT:-15433}:80"
     entrypoint:
       - "/bin/sh"
       - "-c"
