--- a/no-instrumentation/micrometer-native/monolith-ui-api-db/pom.xml
+++ b/no-instrumentation/micrometer-native/monolith-ui-api-db/pom.xml
@@ -49,6 +49,10 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.loki4j</groupId>
+            <artifactId>loki-logback-appender</artifactId>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
@@ -79,10 +83,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.graalvm.buildtools</groupId>-->
-<!--                <artifactId>native-maven-plugin</artifactId>-->
-<!--            </plugin>-->
         </plugins>
     </build>
 </project>
