--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.github.loki4j</groupId>
+                <artifactId>loki-logback-appender</artifactId>
+                <version>1.6.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
