--- a/no-instrumentation/micrometer-native/pom.xml
+++ b/no-instrumentation/micrometer-native/pom.xml
@@ -13,6 +13,6 @@
 	<packaging>pom</packaging>
 	
 	<modules>
-		<module>monolith-ui-api-db</module>
+		<module>micrometer-native-monolith-ui-api-db</module>
 	</modules>
 </project>
