--- a/no-instrumentation/micrometer-native-monolith-ui-api-db/pom.xml
+++ b/no-instrumentation/micrometer-native-monolith-ui-api-db/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.example.no-instrumentation</groupId>
-        <artifactId>micrometer-native</artifactId>
+        <groupId>com.example</groupId>
+        <artifactId>no-instrumentation</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.example.no-instrumentation.micrometer-native</groupId>
