--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
                 <artifactId>loki-logback-appender</artifactId>
                 <version>1.6.0</version>
             </dependency>
+            <dependency>
+                <groupId>net.ttddyy.observation</groupId>
+                <artifactId>datasource-micrometer-spring-boot</artifactId>
+                <version>1.1.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
