--- a/docker/observability-stack/config/otel-collector.yaml
+++ b/docker/observability-stack/config/otel-collector.yaml
@@ -2,7 +2,9 @@ receivers:
   otlp:
     protocols:
       grpc:
+        endpoint: "0.0.0.0:4317"
       http:
+        endpoint: "0.0.0.0:4318"
 
 processors:
   batch:
@@ -10,33 +12,28 @@ processors:
 exporters:
   prometheus:
     endpoint: "0.0.0.0:8889" # Prometheus will scrape here
-
   loki:
     endpoint: http://loki:3100/loki/api/v1/push
-    # optional: labels or resource attributes can be configured
-    labels:
-      resource:
-        service.name: "service"
     tls:
       insecure: true
-
   otlp/tempo:
     endpoint: tempo:4317 #gRPC endpoint
     tls:
       insecure: true
 
 service:
+#  telemetry:
+#    logs:
+#      level: "debug"
   pipelines:
     metrics:
       receivers: [otlp]
       processors: [batch]
       exporters: [prometheus]
-
     logs:
       receivers: [otlp]
       processors: [batch]
       exporters: [loki]
-
     traces:
       receivers: [otlp]
       processors: [batch]
