--- a/no-instrumentation/micrometer-native-monolith/src/main/resources/application.yml
+++ b/no-instrumentation/micrometer-native-monolith/src/main/resources/application.yml
@@ -31,6 +31,10 @@ management:
       "service.name" : "monolith-ui-api-db"
       region: "us-east-1"
       stack: "prod"
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1
   endpoints:
     web:
       exposure:
@@ -38,6 +42,9 @@ management:
   endpoint:
     health:
       show-details: always
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
 
 
 
