--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <spotless.version>2.44.4</spotless.version>
     </properties>
     <modules>
-        <module>components</module>
+        <module>config</module>
         <module>observation-api-instrumentation</module>
         <module>otel-sdk-instrumentation</module>
         <module>no-instrumentation</module>
