--- a/config/2-traces-to-tempo/src/main/resources/application.yml
+++ b/config/2-traces-to-tempo/src/main/resources/application.yml
@@ -19,3 +19,6 @@ management:
   zipkin:
     tracing:
       endpoint: http://localhost:9411/api/v2/spans
+      encoding: json
+      export:
+        enabled: true
