--- a/config/pom.xml
+++ b/config/pom.xml
@@ -16,5 +16,6 @@
 		<module>0-logs-to-loki</module>
 		<module>1-metrics-to-prometheus</module>
 		<module>2-traces-to-tempo</module>
+		<module>3-all-to-backends</module>
 	</modules>
 </project>
