fix issue with quote not being in the correct span do tue open session in view.

--- a/config/2-traces-to-tempo/src/main/resources/application.yml
+++ b/config/2-traces-to-tempo/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     name: traces-to-tempo
     group: config
     version: 1.0.0
+  jpa:
+    open-in-view: false
 
 management:
   endpoints:
