--- a/config/3-all-to-backends/src/main/resources/application.yml
+++ b/config/3-all-to-backends/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     name: all-to-backends
     group: config
     version: 1.0.0
+  jpa:
+    open-in-view: false
 
 management:
   endpoints:
